--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,17 +10,17 @@ definitions:
         name: Pipeline-on-demand deploy steps
         script:
           - apt-get update
-          # - apt-get install -y curl
-          # - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-          # - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-          # - apt-get install yarn && echo "Y"
-          # - yarn policies set-version 1.21.1
-          - npm install --global yarn@1.21.1
+          - apt-get install -y curl
+          - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+          - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+          - apt-get install yarn && echo "Y"
+          - yarn policies set-version 1.21.1
           - npm config set strict-ssl false;
           - cd react_webviews
           - npm install
           - yarn
-          - yarn build
+          # - yarn build
+          - npm run build
           - ls
           - mv build $BITBUCKET_COMMIT
           - pipe: atlassian/google-cloud-storage-deploy:0.4.5
