--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,13 +14,13 @@ definitions:
           - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
           - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
           - apt-get install yarn && echo "Y"
-          - yarn policies set-version 1.21.1
+          - yarn set version 1.21.1
           - npm config set strict-ssl false;
           - cd react_webviews
           - npm install
           - yarn
-          # - yarn build
-          - npm run build
+          - yarn build &
+          - sleep 240
           - ls
           - mv build $BITBUCKET_COMMIT
           - pipe: atlassian/google-cloud-storage-deploy:0.4.5
