--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,8 +19,8 @@ definitions:
           - cd react_webviews
           - npm install
           - yarn
-          - yarn build &
-          - sleep 10
+          - nvm use
+          - yarn build
           - ls
           - mv build $BITBUCKET_COMMIT
           - pipe: atlassian/google-cloud-storage-deploy:0.4.5
