docker file update bug fixed
Signed-off-by: Vinod Jat <vinod@fisdom.com>

--- a/react_webviews/docker-compose.yml
+++ b/react_webviews/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./:/webview
-      - /webview/node_modules
+      - ./:/app
+      - /webview/react_webviews/node_modules
     restart: always
     networks:
       - sbmf-net
