react-dropdown-select initial commit

--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -11,6 +11,8 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.0.0-beta.46",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^1.0.0-rc.0",
     "@material-ui/icons": "^1.0.0-rc.0",
     "@nivo/axes": "0.64.0",
@@ -71,6 +73,7 @@
     "react-circular-progressbar": "^2.0.3",
     "react-dev-utils": "6.1.1",
     "react-dom": "^16.13.1",
+    "react-dropdown-select": "^4.7.4",
     "react-highcharts": "^16.1.0",
     "react-html-parser": "^2.0.2",
     "react-image-crop": "^8.6.5",
