--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -86,6 +86,7 @@
     "react-search-box": "^2.0.2",
     "react-select": "^3.1.1",
     "react-sortable-hoc": "^1.11.0",
+    "react-swipeable-views": "^0.13.9",
     "react-toastify": "^4.5.2",
     "react-tooltip": "^4.2.6",
     "react-tooltip-lite": "^1.12.0",
