--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -10,7 +10,7 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
-    "@babel/runtime": "^7.0.0-beta.46",
+    "@babel/runtime": "7.0.0-beta.55",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^1.0.0-rc.0",
