--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "7.0.0-beta.55",
@@ -34,7 +35,6 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "chart.js": "^2.9.3",
-    "core-js": "^3.1.4",
     "country-telephone-data": "^0.6.2",
     "crypto-js": "^3.1.9-1",
     "css-loader": "0.28.7",
