--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -92,6 +92,7 @@
     "react-tooltip": "^4.2.6",
     "react-tooltip-lite": "^1.12.0",
     "react-transition-group": "^4.4.1",
+    "react-video-recorder": "^3.18.0",
     "resolve": "1.6.0",
     "rsuite": "^4.8.5",
     "scroll-into-view-if-needed": "^2.2.20",
