--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -14,6 +14,7 @@
     "@babel/runtime": "7.0.0-beta.55",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@fontsource/rubik": "^4.4.0",
     "@material-ui/core": "^1.0.0-rc.0",
     "@material-ui/icons": "^1.0.0-rc.0",
     "@nivo/axes": "0.64.0",
