--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -14,7 +14,8 @@
     "@babel/runtime": "7.0.0-beta.55",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "@fontsource/rubik": "^4.4.0",
+    "@fontsource/roboto": "^4.4.2",
+    "@fontsource/rubik": "^4.4.2",
     "@material-ui/core": "^1.0.0-rc.0",
     "@material-ui/icons": "^1.0.0-rc.0",
     "@nivo/axes": "0.64.0",
@@ -102,7 +103,6 @@
     "swiper": "^6.3.5",
     "ts-loader": "4.0.0",
     "typeface-poppins": "^1.1.13",
-    "typeface-roboto": "^0.0.54",
     "typeface-source-sans-pro": "^1.1.5",
     "url-loader": "0.6.2",
     "webpack": "^4.15.1",
