--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -35,6 +35,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "chart.js": "^2.9.3",
+    "compressorjs": "^1.0.7",
     "country-telephone-data": "^0.6.2",
     "crypto-js": "^3.1.9-1",
     "css-loader": "0.28.7",
