--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -36,6 +36,7 @@ definitions:
 
     - step: &master-deploy
         name: Pipeline-on-demand deploy steps
+        size: 2x
         script:
           - apt-get update
           - apt-get install -y curl
