--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -164,7 +164,7 @@
       "@babel/plugin-proposal-class-properties"
     ]
   },
-  "homepage": "https://wv.fisdom.com",
+  "homepage": "https://app.fisdom.com",
   "devDependencies": {
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0-beta.6",
