--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -73,6 +73,7 @@
     "raf": "3.4.0",
     "rc-slider": "^9.3.1",
     "react": "^16.13.1",
+    "react-app-polyfill": "^2.0.0",
     "react-autosuggest": "^9.4.3",
     "react-chartjs-2": "^2.9.0",
     "react-circular-progressbar": "^2.0.3",
@@ -119,8 +120,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "NODE_PATH=./src node scripts/start.js",
-    "build": "NODE_PATH=./src node --max_old_space_size=2000 scripts/build.js",
+    "start": "node scripts/start.js",
+    "build": "node --max_old_space_size=4096 scripts/build.js",
     "test": "NODE_PATH=./src node scripts/test.js --env=jsdom"
   },
   "jest": {
