--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -43,6 +43,7 @@
     "country-telephone-data": "^0.6.2",
     "crypto-js": "^3.1.9-1",
     "css-loader": "0.28.7",
+    "css-vars-ponyfill": "^2.4.6",
     "date-fns": "^2.16.1",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
