--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -108,13 +108,13 @@ pipelines:
 
       - step:
           <<: *prod-deploy
-          name: Production deploy
+          name: Fisdom Production deploy
           trigger: manual
           deployment: fisdom-prod
 
       - step:
           <<: *prod-deploy
-          name: Production deploy
+          name: Finity Production deploy
           trigger: manual
           deployment: finity-prod
       
