--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -84,6 +84,7 @@
     "react-inlinesvg": "^1.2.0",
     "react-input-mask": "^2.0.4",
     "react-jss": "^8.4.0",
+    "react-loadable": "^5.5.0",
     "react-otp-input": "^1.0.1",
     "react-phone-input-2": "^2.13.8",
     "react-placeholder": "^4.0.3",
@@ -180,7 +181,8 @@
     "fork-ts-checker-notifier-webpack-plugin": "^1.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.3.1",
-    "terser-webpack-plugin": "^4.1.0"
+    "terser-webpack-plugin": "^4.1.0",
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "resolutions": {
     "material-ui/@babel/runtime": "7.0.0-beta.42",
