--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -132,6 +132,6 @@ pipelines:
           <<: *master-deploy
           name: Master deploy
 
-definitions:
-  caches:
-    nodemodules: react_webviews/node_modules
+# definitions:
+#   caches:
+#     nodemodules: react_webviews/node_modules
