--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -179,6 +179,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "eslint-loader": "^2.1.2",
     "fork-ts-checker-notifier-webpack-plugin": "^1.0.0",
+    "image-webpack-loader": "^7.0.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.3.1",
     "terser-webpack-plugin": "^4.1.0"
