--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -62,6 +62,7 @@
     "jquery": "^3.3.1",
     "jss": "^9.8.1",
     "material-ui": "next",
+    "mini-css-extract-plugin": "1.6.2",
     "moment": "^2.29.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
