--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -178,6 +178,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-minimizer-webpack-plugin": "1.3.0",
     "eslint-loader": "^2.1.2",
     "fork-ts-checker-notifier-webpack-plugin": "^1.0.0",
     "image-webpack-loader": "^7.0.1",
