Lazy loading Sentry through dynamic imports
This can help to reduce initial load time by removing Sentry from the initial JS bundle (webpack would do this automatically due to dynamic import syntax)

--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -163,7 +163,8 @@
       "@babel/react"
     ],
     "plugins": [
-      "@babel/plugin-proposal-class-properties"
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-syntax-dynamic-import"
     ]
   },
   "homepage": "https://app.fisdom.com",
