Fixed Datepicker UI breaking in account statements
- Added less and less-loader to support modular css import
- Added styling for datepicker to conform to fisdom theme

--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -63,6 +63,8 @@
     "jest": "20.0.4",
     "jquery": "^3.3.1",
     "jss": "^9.8.1",
+    "less": "^3.5.0",
+    "less-loader": "7.0.0",
     "material-ui": "next",
     "moment": "^2.29.0",
     "object-assign": "4.1.1",
