--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -12,12 +12,14 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "7.0.0-beta.55",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fontsource/roboto": "^4.4.2",
     "@fontsource/rubik": "^4.4.2",
     "@material-ui/core": "^1.0.0-rc.0",
     "@material-ui/icons": "^1.0.0-rc.0",
+    "@mui/material": "^5.2.4",
+    "@mui/styles": "^5.2.3",
     "@nivo/axes": "0.64.0",
     "@nivo/circle-packing": "0.64.0",
     "@nivo/core": "0.63.1",
@@ -75,13 +77,13 @@
     "qs": "^6.5.2",
     "raf": "3.4.0",
     "rc-slider": "^9.3.1",
-    "react": "^16.13.1",
+    "react": "17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-autosuggest": "^9.4.3",
     "react-chartjs-2": "^2.9.0",
     "react-circular-progressbar": "^2.0.3",
     "react-dev-utils": "6.1.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "17.0.2",
     "react-highcharts": "^16.1.0",
     "react-html-parser": "^2.0.2",
     "react-image-crop": "^8.6.5",
