--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -18,6 +18,7 @@
     "@fontsource/rubik": "^4.4.2",
     "@material-ui/core": "^1.0.0-rc.0",
     "@material-ui/icons": "^1.0.0-rc.0",
+    "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.4",
     "@mui/styles": "^5.2.3",
     "@nivo/axes": "0.64.0",
