--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -66,6 +66,7 @@ definitions:
         script:
           - export HTTP_PORT=3000
           - echo "127.0.0.1 $HTTP_ADDR" >> /etc/hosts
+          - cat /etc/hosts
           - apt-get update
           - apt-get install -y curl
           - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
