--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -24,7 +24,7 @@ definitions:
           - cd react_webviews
           - yarn
           - unset CI
-          - PIPELINE_ENV=true yarn build
+          - yarn build-pipeline
           - ls
           - mv build $BITBUCKET_COMMIT
           - pipe: atlassian/google-cloud-storage-deploy:0.4.5
@@ -48,7 +48,7 @@ definitions:
           - cd react_webviews
           - yarn
           - unset CI
-          - PIPELINE_ENV=true yarn build
+          - yarn build-pipeline
           - ls
           - mv build $BITBUCKET_BRANCH
           - pipe: atlassian/google-cloud-storage-deploy:0.4.5
@@ -77,7 +77,7 @@ definitions:
           - cd react_webviews
           - yarn
           - unset CI
-          - PIPELINE_ENV=${PIPELINE_ENV} yarn build
+          - yarn ${BUILD_COMMAND}
           - ls
           - cd build
           - pipe: atlassian/google-cloud-storage-deploy:0.4.5
