--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -38,6 +38,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-app": "^9.1.2",
     "babel-runtime": "^6.26.0",
+    "businessLogic": "git+https://fdamitsingh:EafwBATbn2DqxeV7KhsN@bitbucket.org/finwizardtech/businesslogic.git#feature/RN-684-common-business-logic---diy",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "chart.js": "^2.9.3",
@@ -100,7 +101,7 @@
     "react-search-box": "^2.0.2",
     "react-select": "^3.2.0",
     "react-sortable-hoc": "^1.11.0",
-    "react-swipeable-views": "^0.13.9",
+    "react-swipeable-views": "^0.14.0",
     "react-toastify": "^4.5.2",
     "react-tooltip": "^4.2.6",
     "react-tooltip-lite": "^1.12.0",
@@ -121,8 +122,7 @@
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-manifest-plugin": "^3.0.0-rc.0",
-    "whatwg-fetch": "2.0.3",
-    "businessLogic": "git+https://fdamitsingh:EafwBATbn2DqxeV7KhsN@bitbucket.org/finwizardtech/businesslogic.git#feature/RN-684-common-business-logic---diy"
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "NODE_PATH=./src node scripts/start.js",
