--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -116,6 +116,30 @@ pipelines:
             <<: *prod-deploy
             name: Finity-Equity Production deploy
             deployment: finity-webapp-prod
+    
+    deploy-prod-fisdom-finity:
+      - parallel:
+        - step:
+            <<: *prod-deploy
+            name: Fisdom Production deploy
+            deployment: fisdom-prod
+        
+        - step:
+            <<: *prod-deploy
+            name: Finity Production deploy
+            deployment: finity-prod
+        
+    deploy-prod-app2-equity:
+      - parallel:
+        - step:
+            <<: *prod-deploy
+            name: Fisdom-Equity Production deploy
+            deployment: fisdom-webapp-prod
+
+        - step:
+            <<: *prod-deploy
+            name: Finity-Equity Production deploy
+            deployment: finity-webapp-prod
 
   branches:
     # master:
