--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -27,6 +27,7 @@
     "@nivo/line": "0.64.0",
     "@nivo/pie": "0.66.0",
     "@nivo/tooltip": "0.64.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "@sentry/react": "^6.2.5",
     "@sentry/tracing": "^6.2.5",
     "acorn": "^6.0.0",
@@ -98,6 +99,7 @@
     "react-phone-input-2": "^2.13.8",
     "react-placeholder": "^4.0.3",
     "react-player": "^2.9.0",
+    "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.1.2",
     "react-search-box": "^2.0.2",
@@ -109,6 +111,7 @@
     "react-tooltip-lite": "^1.12.0",
     "react-transition-group": "^4.4.1",
     "react-video-recorder": "^3.18.0",
+    "redux-saga": "^1.1.3",
     "resolve": "1.6.0",
     "rsuite": "^4.8.5",
     "screenfull": "^5.1.0",
