--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -62,6 +62,8 @@
     "file-loader": "^1.1.11",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "fs-extra": "3.0.1",
+    "highcharts": "^9.3.3",
+    "highcharts-react-official": "^3.1.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "idempotent-babel-polyfill": "^7.4.4",
