--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -190,6 +190,18 @@
           "loose": true
         }
       ],
+      [
+        "@babel/plugin-proposal-private-property-in-object",
+        {
+          "loose": true
+        }
+      ],
+      [
+        "@babel/plugin-proposal-private-methods",
+        {
+          "loose": true
+        }
+      ],
       "@babel/plugin-syntax-dynamic-import"
     ]
   },
