--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -71,6 +71,7 @@
     "jss": "^9.8.1",
     "less": "^3.5.0",
     "less-loader": "7.0.0",
+    "lodash-es": "^4.17.21",
     "lottie-react": "^2.2.1",
     "material-ui": "next",
     "mini-css-extract-plugin": "1.6.2",
