--- a/react_webviews/package.json
+++ b/react_webviews/package.json
@@ -66,6 +66,8 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "idempotent-babel-polyfill": "^7.4.4",
+    "intro.js": "^5.1.0",
+    "intro.js-react": "^0.6.0",
     "jest": "20.0.4",
     "jquery": "^3.3.1",
     "jss": "^9.8.1",
